fixes #30